--- a/package.json
+++ b/package.json
@@ -12,7 +12,20 @@
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "stream-chat": "^8.2.1",
+    "stream-chat-expo": "^5.7.0",
+    "@react-native-community/netinfo": "9.3.5",
+    "expo-document-picker": "~11.0.1",
+    "expo-file-system": "~15.1.1",
+    "expo-haptics": "~12.0.1",
+    "expo-image-manipulator": "~11.0.0",
+    "expo-image-picker": "~14.0.2",
+    "expo-media-library": "~15.0.0",
+    "expo-sharing": "~11.0.1",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
